add some descriptions

--- a/solar_data_analysis.ipynb
+++ b/solar_data_analysis.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Collection"
+    "# Data Collection\n",
+    "\n",
+    "First the data is imported in a dataframe and we make a line plot of the temperature"
    ]
   },
   {
@@ -312,6 +314,7 @@
    "source": [
     "import missingno as msno\n",
     "\n",
+    "#overview of missing values\n",
     "msno.matrix(df[[\"raw\", \"temperature\", \"modified1\", \"modified2\", \"modified3\"]], figsize=(15,10))\n",
     "plt.title(\"Matrix of missing values in the columns of the project dataset\", fontsize=16)\n",
     "plt.savefig(\"diagrams/matrix_missing_values.pdf\")"
